--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "description": "Svelte chat application with minimal functionality",
+  "dependencies": {
+    "gun": "^0.2020.1239",
+    "lodash.debounce": "^4.0.8"
+  },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/lodash.debounce": "^4.0.9",
     "svelte": "^5.25.6",
     "vite": "^6.2.5"
   }
