--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/lodash.debounce": "^4.0.9",
+    "autoprefixer": "^10.4.20",
+    "bits-ui": "^0.22.0",
+    "clsx": "^2.1.1",
     "svelte": "^5.25.6",
+    "tailwind-merge": "^3.1.0",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.2.5"
   }
 }
