--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "autoprefixer": "^10.4.20",
     "bits-ui": "^0.22.0",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.487.0",
+    "mode-watcher": "^0.5.1",
+    "postcss": "^8.5.3",
     "svelte": "^5.25.6",
+    "svelte-sonner": "^0.3.28",
     "tailwind-merge": "^3.1.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^3.4.17",
